[package]
name = "obliviate"
version = "0.1.3"
authors = ["Paolo Marino"]
edition = "2018"
readme = "README.md"
license = "MIT"
description = "Small utility to delete files older than a certain amount of days."
repository = "https://github.com/pmarino90/obliviate"
homepage = "https://github.com/pmarino90/obliviate"

[dependencies]
clap = {version = "4.5.1", features = ["cargo"]}
log = "0.4.6"
simple_logger = "4.3.3"
humansize = "2.1.3"